fixed footer on mobile

--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
 }
 
 body {
-    height: 100%;
+    max-height: 100vh;
+    width: 100vw;
     background-color: #cdf3fa;
+    overflow-x: hidden;
+
 }
 
 .header {
@@ -29,6 +32,7 @@ body {
 .canvas-wrapper {
     display: flex;
     justify-content: center;
+    height: 100%;
 }
 
 .canvas-container {
@@ -97,12 +101,14 @@ button {
 }
 
 .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     background-color: #05445E;
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: fixed;
-    width: 100%;
 }
 
 .footer p {
@@ -112,15 +118,15 @@ button {
 
 .footer-images {
     width: 100%;
-    margin: 10px 0 5px 0;
+    margin-top: 5px;
     display: flex;
     justify-content: space-evenly;
 
 }
 
 .footer-images img {
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
 }
 
 #newGrid {
